fix edit-bar z-index

--- a/src/nativeflavors/theme/theme/scss/app.scss
+++ b/src/nativeflavors/theme/theme/scss/app.scss
@@ -338,6 +338,8 @@ p {
 
 #edit-bar {
 	font-size: 100%;
+	position: relative;
+	z-index: 999;
 }
 
 #pages {
